k3s/qbittorrent/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  serviceName: qbittorrent
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      name: qbittorrent
      namespace: qbittorrent
      labels:
        app: qbittorrent
    spec:
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: shared-volume
        nfs:
          server: 192.168.57.13
          path: /nfs/k3s/data/retain/shared-volume
      containers:
      - name: qbittorrent
        image: "linuxserver/qbittorrent:5.1.2@sha256:d6aebe87050274db1e80b54ed8be5684836d57698fbc840e29df24ef0471cf12"
        volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: shared-volume
          mountPath: /shared-volume
        ports:
        - containerPort: 8080
          name: web
        - containerPort: 6881
          hostPort: 6881
          protocol: TCP
        - containerPort: 6881
          hostPort: 6881
          protocol: UDP
